from .FrameProcessingConfig import FrameProcessingConfig


class BallProcessorConfig(FrameProcessingConfig):
    pass