from .FrameProcessingConfig import FrameProcessingConfig


class CueProcessorConfig(FrameProcessingConfig):
    pass
     


    

